use name at client page

--- a/client.haml
+++ b/client.haml
@@ -2,5 +2,5 @@
 %html
   %head
     %script{src: '/socket.io/socket.io.js'}
-    %script{src: '/tricknotes/connect.js'}
+    %script{src: '/'+name+'/connect.js'}
   %body
